<resources>
    <string name="app_name">HelloFrog</string>
    <string name="app_header">Frogify (plz Spotify dont sue me)</string>
    <string name="intro">Tired of the government? Dunno who to vote cuz.. YOLO who cares about politics? No stress, just Frogify yourself and get the chance to see your new King! </string>
    <string name="label_name">Your Name</string>
    <string name="label_species">Your New Species</string>
    <string name="submit_button">See the King</string>
    <string name="activity_details">All Glory To Hypno Toad</string>
    <string name="footer">Bonus Content: The developer after a week of Java...</string>
    <string name="text_king_order">The Hypno Toad King orders you to spend your life catching mosquitos and flies! Fulfill your Destiny young padaw...ehm, toa...ehm, frog!</string>
</resources>
