<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorSecondary"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:text="@string/intro"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/label_name"
        android:textColor="@color/colorText"
        android:background="@color/colorSecondary"/>

    <EditText
        android:id="@+id/species_input"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/label_species"
        android:textColor="@color/colorText"
        android:background="@color/colorSecondary"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="150dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimary"
        android:text="@string/submit_button"/>

    <TextView
        android:text="@string/footer"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:layout_width="400dp"
        android:layout_height="30dp"/>

    <ImageView
        android:id="@+id/fairy_tail_gif"
        android:layout_width="400dp"
        android:layout_height="300dp"/>

</LinearLayout>